mediaview: Fix ARC file system operation deferring.

After recent changes of ARC startup refactoring (crbug.com/657687), ARC
file system operation deferring of media views was broken.

Formerly ArcFileSystemOperationRunner was constructed in
ArcServiceLauncher::Initialize(), which happens before a primary profile
is created. Thus it was wrong to check ARC opt-in status in its
constructor. Nevertheless it seemed to work because
ArcFileSystemOperationRunner::OnArcPlayStoreEnabledChanged() was always
called soon after login, which is no longer the case after the
refactoring.

This patch moves the construction of ArcFileSystemOperationRunner to
ArcServiceLauncher::OnPrimaryUserProfilePrepared() and passes Profile to
ArcFileSystemOperationRunner explicitly.

Due to this change, ARC file operations issued before a primary profile
gets ready are dropped, but we do not expect such operations. But just
in case, we emit error logs in such cases.

BUG=chromium:695358
BUG=chromium:657687
TEST=unit_tests
TEST=No "operations are dropped" lines in /var/log/ui/ui.LATEST

Review-Url: https://codereview.chromium.org/2704123007
Cr-Commit-Position: refs/heads/master@{#452441}

Former-commit-id: 8514e79471d9dfa4a9376317b86f45b57e11eea6